{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 617,
  "lineage": "c8866f1c-99e7-14c8-ad8e-49d96dd40ce5",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:loadbalancer/app/test-lb-tf/d8d88a46e00f7945",
            "arn_suffix": "app/test-lb-tf/d8d88a46e00f7945",
            "dns_name": "test-lb-tf-783034785.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:825035861533:loadbalancer/app/test-lb-tf/d8d88a46e00f7945",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-08d91c129faffde99"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00080573ff22e7be9"
              },
              {
                "subnet_id": "subnet-0db5d4ebd84a82024"
              }
            ],
            "subnets": [
              "subnet-00080573ff22e7be9",
              "subnet-0db5d4ebd84a82024"
            ],
            "vpc_id": "vpc-07abb1606588b8f2a",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.aws_security_group",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:listener/app/test-lb-tf/d8d88a46e00f7945/103bd1a3cd2f61e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:targetgroup/target-group/afecf49c14fef9c2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:825035861533:listener/app/test-lb-tf/d8d88a46e00f7945/103bd1a3cd2f61e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:loadbalancer/app/test-lb-tf/d8d88a46e00f7945",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.application_load_balancer",
            "module.alb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.aws_security_group",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:targetgroup/target-group/afecf49c14fef9c2",
            "arn_suffix": "targetgroup/target-group/afecf49c14fef9c2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:825035861533:targetgroup/target-group/afecf49c14fef9c2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rtpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:route-table/rtb-07f7a1718c74693eb",
            "default_route_table_id": "rtb-07f7a1718c74693eb",
            "id": "rtb-07f7a1718c74693eb",
            "owner_id": "825035861533",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0981a84ee1bbdc6aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTT"
            },
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07c161fe192dbc8de",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-19-109-234.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.109.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b2e24cd7e7606198",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-217-78-191.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.78.191",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:internet-gateway/igw-0981a84ee1bbdc6aa",
            "id": "igw-0981a84ee1bbdc6aa",
            "owner_id": "825035861533",
            "tags": {
              "Name": "Internet-gateway"
            },
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c161fe192dbc8de",
            "id": "nat-02c448e0c3831ed88",
            "network_interface_id": "eni-0b4c836b913bb4bba",
            "private_ip": "10.0.0.42",
            "public_ip": "3.19.109.234",
            "subnet_id": "subnet-0db5d4ebd84a82024",
            "tags": {
              "Name": "Nat_for_A"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2e24cd7e7606198",
            "id": "nat-04bb640900e34bbd3",
            "network_interface_id": "eni-0c06c9c071eeaaa80",
            "private_ip": "10.0.7.211",
            "public_ip": "18.217.78.191",
            "subnet_id": "subnet-07288f7b43e8de98e",
            "tags": {
              "Name": "Nat_for_B"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:route-table/rtb-043d10b486390a3e4",
            "id": "rtb-043d10b486390a3e4",
            "owner_id": "825035861533",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02c448e0c3831ed88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT"
            },
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway1",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:route-table/rtb-0a5dc46c6ff1faf33",
            "id": "rtb-0a5dc46c6ff1faf33",
            "owner_id": "825035861533",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04bb640900e34bbd3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT2"
            },
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_eip2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway2",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0038961cf4d540142",
            "route_table_id": "rtb-07f7a1718c74693eb",
            "subnet_id": "subnet-0db5d4ebd84a82024"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.rtpub",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c005e46bac447c2d",
            "route_table_id": "rtb-043d10b486390a3e4",
            "subnet_id": "subnet-0e7f6768708d9c88f"
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway1",
            "module.vpc.aws_route_table.rtp",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f026535c7cad7d8a",
            "route_table_id": "rtb-07f7a1718c74693eb",
            "subnet_id": "subnet-07288f7b43e8de98e"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.rtpub",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b2569279169fd1e",
            "route_table_id": "rtb-0a5dc46c6ff1faf33",
            "subnet_id": "subnet-00080573ff22e7be9"
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway2",
            "module.vpc.aws_route_table.rtp2",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:security-group/sg-08d91c129faffde99",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d91c129faffde99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210404174243325300000001",
            "name_prefix": "terraform-",
            "owner_id": "825035861533",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:subnet/subnet-0e7f6768708d9c88f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.8.0/22",
            "id": "subnet-0e7f6768708d9c88f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825035861533",
            "tags": {
              "Name": "Private_subnet_a"
            },
            "tags_all": {
              "Name": "Private_subnet_a"
            },
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:subnet/subnet-00080573ff22e7be9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/22",
            "id": "subnet-00080573ff22e7be9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825035861533",
            "tags": {
              "Name": "Private_subnet_b"
            },
            "tags_all": {
              "Name": "Private_subnet_b"
            },
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:subnet/subnet-0db5d4ebd84a82024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/22",
            "id": "subnet-0db5d4ebd84a82024",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825035861533",
            "tags": {
              "Name": "Public_subnet_a"
            },
            "tags_all": {
              "Name": "Public_subnet_a"
            },
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:subnet/subnet-07288f7b43e8de98e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/22",
            "id": "subnet-07288f7b43e8de98e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825035861533",
            "tags": {
              "Name": "Public_subnet_b"
            },
            "tags_all": {
              "Name": "Public_subnet_b"
            },
            "vpc_id": "vpc-07abb1606588b8f2a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:vpc/vpc-07abb1606588b8f2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-00b61048183f45c80",
            "default_route_table_id": "rtb-07f7a1718c74693eb",
            "default_security_group_id": "sg-001ecc7f394de9d0b",
            "dhcp_options_id": "dopt-72b82519",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07abb1606588b8f2a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07f7a1718c74693eb",
            "owner_id": "825035861533",
            "tags": {
              "Name": "dev_youtube-vpc"
            },
            "tags_all": {
              "Name": "dev_youtube-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}